@@ -66,6 +66,8 @@ Niv Levy <nivl2000@gmail.com>
     NetCDF import improvements.
 Vinicius Barboza <vinicius.barboza@lnnano.cnpem.br>
     Otsu thresholding.
+Jeffrey J. Schwartz <schwartz@physics.ucla.edu>
+    WinSTM file import.
 
 
 === Translators ===
